Changed list of error files